# websearch

./: .gitignore  LICENSE  README.md  pyproject.toml  run_tests.sh  smoke_test.py
.github/workflows/: publish.yml
src/websearch/: __init__.py  search.py
tests/: test_search_engine.py
